--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "celebrate": "^11.0.1",
     "express": "^4.17.1",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.9.1",
     "validator": "^12.2.0"
   }
